--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,9 +3,11 @@ stages:
     cmd: python src/data_ingestion.py
     deps:
     - src/data_ingestion.py
+    params:
+    - data_ingestion.test_size
     outs:
     - data/raw 
-  preprocessing:
+  preprocessing:  
     cmd: python src/preprocessing.py
     deps:
     - data/raw
@@ -17,6 +19,8 @@ stages:
     deps:
     - data/interim
     - src/feature_engineering.py
+    params:
+    - feature_engineering.max_features
     outs:
     - data/processed
 
@@ -25,6 +29,9 @@ stages:
     deps:
     - data/processed
     - src/model_training.py
+    params:
+    - model_building.n_estimators
+    - model_building.random_state
     outs:
     - models/model.pkl
 
